src/app/snapshots/jiq__app__app_render__snapshot_tests__snapshot_stats_bar_error_shows_last_stats.snap
---
source: src/app/app_render.rs
expression: output
---
"┌ ⚠ Syntax Error (Array [5 numbers] - last successful query result) ───────────┐"
"│[                                                                             │"
"│  1,                                                                          │"
"│  2,                                                                          │"
"│  3,                                                                          │"
"│  4,                                                                          │"
"│  5                                                                           │"
"│]                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Query [INSERT] ⚠ Syntax Error (Ctrl+E to view) Press Ctrl+A for AI Assistant ┐"
"│.invalid[                                                                     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" F1: Help | Shift+Tab: Switch Pane | ↑/Ctrl+R: History | Enter: Output Result | "
