src/app/snapshots/jiq__app__app_render__snapshot_tests__snapshot_tooltip_operator_alternative.snap
---
source: src/app/app_render.rs
expression: output
---
"┌ Object ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│{                                                                                                                     │"
"│  "name": "Alice",                                                                                                    │"
"│  "age": 30                                                                                                           │"
"│}                                                                                                                     │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                               ┌ operator: // ─────────────────────────────────── Ctrl+T to dismiss ┐ │"
"│                                               │Alternative operator - returns right side if left is null or false  │ │"
"│                                               │                                                                    │ │"
"│                                               │  .name // "anonymous" │ default for null/missing                   │ │"
"│                                               │  .count // 0          │ default number                             │ │"
"│                                               │  .config // {}        │ default empty object                       │ │"
"│                                               │  (.x // .y) // .z     │ chain alternatives                         │ │"
"│                                               │                                                                    │ │"
"│                                               │💡 Only triggers on null/false - use 'if . == "" then ... end' for  │ │" Hidden by multi-width symbols: [(50, " ")]
"│                                               │   empty strings                                                    │ │"
"└───────────────────────────────────────────────└────────────────────────────────────────────────────────────────────┘─┘"
"┌ Query [INSERT] ─────────────────────────────────────────────────────────────────────── Press Ctrl+A for AI Assistant ┐"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" F1: Help | Shift+Tab: Switch Pane | Ctrl+P/N: Cycle History | ↑/Ctrl+R: History                                        "
