src/app/snapshots/jiq__app__app_render__snapshot_tests__snapshot_tooltip_popup_with_all_fields.snap
---
source: src/app/app_render.rs
expression: output
---
"┌ Object ──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│{                                                                                                                     │"
"│  "name": "Alice",                                                                                                    │"
"│  "age": 30                                                                                                           │"
"│}                                                                                                                     │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                       ┌ fn: select ───────────────────────────── Ctrl+T to dismiss ┐ │"
"│                                                       │Filter elements that match a condition                      │ │"
"│                                                       │                                                            │ │"
"│                                                       │  select(.age > 18)                       │ numeric filter  │ │"
"│                                                       │  select(.status == "active")             │ exact match     │ │"
"│                                                       │  select(.tags | contains(["important"])) │ array check     │ │"
"│                                                       │  select(.name | test("^test"; "i"))      │ regex match     │ │"
"│                                                       │                                                            │ │"
"│                                                       │💡 For null-safe checks, use select(.field? // false)       │ │" Hidden by multi-width symbols: [(58, " ")]
"└───────────────────────────────────────────────────────└────────────────────────────────────────────────────────────┘─┘"
"┌ Query [INSERT] ─────────────────────────────────────────────────────────────────────── Press Ctrl+A for AI Assistant ┐"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" F1: Help | Shift+Tab: Switch Pane | Ctrl+P/N: Cycle History | ↑/Ctrl+R: History                                        "
