src/app/snapshots/jiq__app__app_render__snapshot_tests__snapshot_ui_error_overlay_visible.snap
---
source: src/app/app_render.rs
expression: output
---
"┌ ⚠ Syntax Error (Object - last successful query result) ──────────────────────┐"
"│{                                                                             │"
"│  "test": true                                                                │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│ ┌ Syntax Error (Ctrl+E to close) ──────────────────────────────────────────┐ │"
"│ │jq: error: syntax error, unexpected end of file at <top-level>, line 1, co│ │"
"│ │    .invalid[                                                             │ │"
"│ │            ^                                                             │ │"
"│ │jq: 1 compile error                                                       │ │"
"│ └──────────────────────────────────────────────────────────────────────────┘ │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Query [INSERT] ⚠ Syntax Error (Ctrl+E to view) Press Ctrl+A for AI Assistant ┐"
"│.invalid[                                                                     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" F1: Help | Shift+Tab: Switch Pane | ↑/Ctrl+R: History | Enter: Output Result | "
